# ERP_system-Odoo

./: .env  Dockerfile  LICENSE  README.md  docker-compose.yml  start-odoo.ps1
.github/workflows/: odoo.yml
addons/account-financial-reporting/: README.md
addons/account-financial-reporting/account_move_line_report_xls/: README.rst
addons/account-financial-reporting/partner_statement/: README.rst  __manifest__.py
addons/base_accounting_kit/data/: account_financial_report_data.xml
addons/base_accounting_kit/report/: account_report_common_account.py  general_ledger_report.py  general_ledger_report_template.xml  report.xml  report_trial_balance.py  report_trial_balance_template.xml
addons/base_accounting_kit/wizard/: account_balance_report.py  account_balance_report_views.xml  account_report_general_ledger.py  account_report_general_ledger_views.xml
addons/binget_branding/: __init__.py  __manifest__.py
addons/binget_spare_parts/: __manifest__.py
addons/binget_spare_parts/models/: __init__.py  mrp_bom_line.py  product_product.py  product_template.py
addons/binget_spare_parts/security/: ir.model.access.csv
addons/binget_spare_parts/views/: mrp_bom_views.xml  product_template_views.xml
addons/customer_credit_report/: __manifest__.py
addons/customer_credit_report/models/: res_partner.py
addons/customer_credit_report/views/: res_partner_credit_views.xml
addons/display_current_balance/: __manifest__.py
addons/lc_management/: __manifest__.py
addons/mrp_product_domain/: __manifest__.py
addons/payroll/: README.md
addons/payroll/setup/_metapackage/: pyproject.toml
addons/purchase_shipment_bill_check/: __manifest__.py
addons/reporting-engine/: README.md
addons/reporting-engine/setup/_metapackage/: pyproject.toml
addons/sale_stock_reserved_qty_check/: __manifest__.py
addons/server-tools/: README.md
addons/shipment_tracking/: __manifest__.py
addons/stock-logistics-workflow/: README.md
addons/stock_negative_prevent/: __manifest__.py
addons/vehicle_inventory/: __manifest__.py
addons/web/: .copier-answers.yml  .pre-commit-config.yaml  README.md  checklog-odoo.cfg
addons/web_database_selector_branding/: README.md  __manifest__.py
addons/web_offline_customize/: __manifest__.py
config/: odoo.conf
(+999 files in other folders)
