[project]
name = "odoo-addons-oca-payroll"
version = "18.0.20260408.1"
dependencies = [
    "odoo-addon-payroll==18.0.*",
    "odoo-addon-payroll_account==18.0.*",
    "odoo-addon-payroll_contract_advantages==18.0.*",
    "odoo-addon-payroll_hr_public_holidays==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
